# c_gkurve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  atlas.c  atlas.h  draw.c  draw.h  draw_structs.h  frag.wgsl  label.c  label.h  main.c  memory_alloc_helpers.c  memory_alloc_helpers.h  resizable_label.c  resizable_label.h  triangulate_polygon.c  triangulate_polygon.h  vert.wgsl
docs/: resizable_label_explainer.md
helpers/: CMakeLists.txt
